oci_learn: Updated .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@
 *.rar
 token.txt
 Terraform/oci_scripts/.terraform/providers/registry.terraform.io/oracle/oci/7.9.0/windows_amd64/terraform-provider-oci_v7.9.0
-*.auto.tfvars
+*.auto.tfvarsssh_pair
