--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,1 @@
-*.exe
-*.lock.*
-*.zip
-*.rar
-token.txt
-Terraform/oci_scripts/.terraform/providers/registry.terraform.io/oracle/oci/7.9.0/windows_amd64/terraform-provider-oci_v7.9.0
+Terraform/oci_scripts/ssh_pair/*
