--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ Minikube/logo.ico
 Minikube/minikube.exe 
 Minikube/uninstall.exe 
 Minikube/update_path.ps1
+**/nohup.out
+Kubernetes_study/helm-v3.18.5-windows-amd64/
